[package]
author = ["victoryang00 <yangyiwei2000@gmail.com>"]
edition = "2021"
name = "alderlake-llc-slice-latency-test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cat-process = ["shmem-ipc", "rusty-fork"]
p-to-e = []

[dependencies]
core_affinity = "0.8.0"
crossbeam-epoch = "0.9.13"
crossbeam-utils = "0.8.12"
lazy_static = "1.4.0"
rusty-fork = {version = "0.3.0", optional = true}
shmem-ipc = {version = "0.3.0", optional = true}
zerocopy = {version = "0.6.1", optional = true}

[build-dependencies]
cc = {version = "1.0", features = ["parallel"]}
pkg-config = "0.3"
